v0.2.0, <INSERT RELEASE DATE HERE>:

* If no input file is specified, Builder will now tell you that you can pass -h as a command line arg to get help on how to use Builder.
* .build_info files have been massively refactored:
	* .build_info files are now binary files.
	* Instead of .build_info only containing all source files used in the build (and all the header files we can find) we now serialize all members of BuilderOptions and, if it exists, the visual studio solution/projects you generated.
	* As a result of these changes, all .build_info files were made with an older version of Builder will no longer work.
* Make things clearer in the README.
* Added BuilderOptions::warnings_as_errors.
* Builder will now fatal error if it can't create the binary folder that you specify inside set_builder_options().
* Better, more helpful information is displayed when you use the help command line argument.

----------------------------------------------------------------

v0.1.1, 12/10/2024:

* Builder will no longer crash if it can't resolve a source file to include in the build and will instead show you an error saying it can't resolve the source file(s) and exit.
* Fixed another ABI incompatibility issue between Builder and the user config DLL that caused a crash when trying to write to any of the std::vectors.
* Fixed a bunch of things that were broken for generating Visual Studio project files after removing our dependency to Core.
* VisualStudioSolution::path is now relative to the source file that implements set_visual_studio_options, as the documentation says.

----------------------------------------------------------------

v0.1.0, 11/10/2024:

* Add set_builder_options( BuilderOptions* ), which lets you customize your builds how you want via C++.
* Add --nuke command line argument that will delete all the contents of a folder, followed by the folder itself.
* Add --config=<config> command line argument which lets you specify your own configs.